; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_bufmgr.c_CheckPointBuffers.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_bufmgr.c_CheckPointBuffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8*, i8* }

@CheckpointStats = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CheckPointBuffers(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @TRACE_POSTGRESQL_BUFFER_CHECKPOINT_START(i32 %3)
  %5 = call i8* (...) @GetCurrentTimestamp()
  store i8* %5, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @CheckpointStats, i32 0, i32 2), align 8
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @BufferSync(i32 %6)
  %8 = call i8* (...) @GetCurrentTimestamp()
  store i8* %8, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @CheckpointStats, i32 0, i32 1), align 8
  %9 = call i32 (...) @TRACE_POSTGRESQL_BUFFER_CHECKPOINT_SYNC_START()
  %10 = call i32 (...) @ProcessSyncRequests()
  %11 = call i8* (...) @GetCurrentTimestamp()
  store i8* %11, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @CheckpointStats, i32 0, i32 0), align 8
  %12 = call i32 (...) @TRACE_POSTGRESQL_BUFFER_CHECKPOINT_DONE()
  ret void
}

declare dso_local i32 @TRACE_POSTGRESQL_BUFFER_CHECKPOINT_START(i32) #1

declare dso_local i8* @GetCurrentTimestamp(...) #1

declare dso_local i32 @BufferSync(i32) #1

declare dso_local i32 @TRACE_POSTGRESQL_BUFFER_CHECKPOINT_SYNC_START(...) #1

declare dso_local i32 @ProcessSyncRequests(...) #1

declare dso_local i32 @TRACE_POSTGRESQL_BUFFER_CHECKPOINT_DONE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
